# gvca_sac

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  analysis.ipynb  compare_ai_and_manual_labels.ipynb  config.py  docker-compose.yml  main.py  pipeline.py  pipelined_analysis.ipynb  process_subsets.py  propose_file_split.py  pyproject.toml  taxonomy.md
.devcontainer/standard/: Dockerfile  devcontainer.json  docker-compose.dev.yml  noop.txt  on_create_hook.sh  post_create_hook.sh  post_start_hook.sh  project_setup.sh
.github/workflows/: secret-scan.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  constants.py  main.py
backend/app/core/: __init__.py  analysis.py  charts.py  clustering.py  deck_generator.py  embeddings.py  pipeline.py  summarization.py  survey_config.py  tagging.py  transform.py
backend/app/models/: __init__.py  charts.py  data.py  pagination.py
backend/app/routers/: artifacts.py  batch_jobs.py  charts.py  cluster_metadata.py  clustering.py  config_api.py  data.py  deck.py  jobs.py  pipeline.py  tagging.py  tags.py
backend/app/services/: job_queue.py  openai_batch.py  pipeline_manager.py  pocketbase_client.py
backend/tests/: conftest.py  test_config.py
backend/tests/routers/: test_data.py  test_tagging.py
docker/: setup-certs.sh
docs/: README.md  api-reference.md  architecture.md  data-model.md  deck-generation.md  reproducing-state.md  testing.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
pocketbase/: Dockerfile
(+49 files in other folders)
